name:                ss4r-tool
version:             0.1.0
build-type:          Simple
cabal-version:       >=1.10

executable ss4r-tool
  main-is:             Main.hs
  build-depends:       base >=4.16,
                       megaparsec,
                       text
  hs-source-dirs:      src
  default-language:    Haskell2010
